implement new revocation status enums
